--- a/FormularioContacto/FormularioContacto.csproj
+++ b/FormularioContacto/FormularioContacto.csproj
@@ -5,5 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  
+ <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
 
 </Project>
