--- a/FormularioContacto/appsettings.json
+++ b/FormularioContacto/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = DESKTOP-1340B5J; Database = FormContactoDB; Trusted_Connection = True;"
+  }
 }
